--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "chatty",
   "version": "0.0.0",
+  "description": "Server side of the iOS Chatty app",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "babel-node server.js --presets es2015"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -14,6 +15,7 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1"
   }
