--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "firebase-admin": "^5.0.1",
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
     "serve-favicon": "~2.4.2"
